--- a/roles/services/audiobookshelf/tasks/main.yml
+++ b/roles/services/audiobookshelf/tasks/main.yml
@@ -26,6 +26,7 @@
       traefik.http.routers.audiobookshelf-secure.tls: "true"
       traefik.http.routers.audiobookshelf-secure.service: "audiobookshelf"
       traefik.http.services.audiobookshelf.loadbalancer.server.url: "http://vault.local:13378"
+      traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto: "https" 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - "{{ config_root }}/audiobookshelf_config:/config"
