--- a/roles/services/duplicati/tasks/main.yml
+++ b/roles/services/duplicati/tasks/main.yml
@@ -1,12 +1,28 @@
 ---
-- name: Make sure the remote backup vpn client container is created and running
+# 
+# Openvpn can be set up to only connect to specific ip by 
+# adding this to the end of the .ovpn file
+
+# route-nopull
+# route 192.168.X.X 255.255.255.255
+
+# askpass pass.txt
+
+# Configure OPenVPN to run as a service and always connect so that it knows about 192.168.X.X backup server
+
+# https://www.maketecheasier.com/connect-vpn-automatically-linux/
+
+
+- name: Make sure the duplicati container is created and running
   docker_container:
-    image: ghcr.io/wfg/openvpn-client
-    name: openvpn-client
-    capabilities:
-      - NET_ADMIN
+    image: lscr.io/linuxserver/duplicati:latest
+    name: duplicati
     networks:
       - name: proxy
+    ports:
+      - 8200:8200
+    pull: yes
+    state: 'started'
     labels:
       traefik.enable: "true"
       traefik.http.routers.duplicati.entrypoints: "http"
@@ -21,51 +37,10 @@
       traefik.http.routers.duplicati-secure.tls: "true"
       traefik.http.routers.duplicati-secure.service: "duplicati"
       traefik.http.services.duplicati.loadbalancer.server.url: "http://vault.local:8200"
-    devices:
-      - /dev/net/tun
-    ports:
-    # expose duplicati - may play poorly with traefik
-      - 8200:8200
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
-      ALLOWED_SUBNETS: "192.168.1.0/24,172.17.0.0/24"
-      VPN_CONFIG_FILE: "homelab-jcoulter.ovpn"
-    volumes:
-      - "{{ config_root }}/openvpn_config:/data/vpn"
-    restart_policy: unless-stopped
-
-- name: Make sure the duplicati container is created and running
-  docker_container:
-    image: lscr.io/linuxserver/duplicati:latest
-    name: duplicati
-    network_mode: container:openvpn-client
-    # networks:
-    #   - name: proxy
-    # ports:
-    #   - 8200:8200
-    pull: yes
-    state: 'started'
-    # labels:
-    #   traefik.enable: "true"
-    #   traefik.http.routers.duplicati.entrypoints: "http"
-    #   # This syntax allows cloudflare tunnel to host duplicati.coulter.rocks which points to local duplicati-in.coulter.rocks over https
-    #   # Both duplicati.coulter.rocks and duplicati-in.coulter.rocks must be configured in local dns (pi-hole)
-    #   # https://www.youtube.com/watch?v=yMmxw-DZ5Ec
-    #   traefik.http.routers.duplicati.rule: "Host(`duplicati.coulter.rocks`)||Host(`duplicati-in.coulter.rocks`)"
-    #   traefik.http.middlewares.duplicati-https-redirect.redirectscheme.scheme: "https"
-    #   traefik.http.routers.duplicati.middlewares: "duplicati-https-redirect"
-    #   traefik.http.routers.duplicati-secure.entrypoints: "https"
-    #   traefik.http.routers.duplicati-secure.rule: "Host(`duplicati.coulter.rocks`)||Host(`duplicati-in.coulter.rocks`)"
-    #   traefik.http.routers.duplicati-secure.tls: "true"
-    #   traefik.http.routers.duplicati-secure.service: "duplicati"
-    #   traefik.http.services.duplicati.loadbalancer.server.url: "http://vault.local:8200"
-    env:
-      PUID: "{{ puid }}"
-      PGID: "{{ pgid }}"
-      TZ: "{{ timezone }}"
-            # - CLI_ARGS= #optional
     volumes:
       - "{{ config_root }}/duplicati_data:/config"
       - "{{ data_root }}:/data"
