--- a/roles/services/traefik/files/traefik.yml
+++ b/roles/services/traefik/files/traefik.yml
@@ -17,7 +17,7 @@ entryPoints:
           scheme: https
   https:
     address: ":443"
-    http:
+    # http:
       # middlewares:
       #   - crowdsec-bouncer@file
   http-external:
@@ -31,7 +31,7 @@ entryPoints:
           scheme: https
   https-external:
     address: ":444"
-    http:
+    # http:
       # middlewares:
       #   - crowdsec-bouncer@file
 serversTransport:
@@ -60,7 +60,18 @@ certificatesResolvers:
       storage: acme.json
       dnsChallenge:
         provider: cloudflare
-        disablePropagationCheck: true # uncomment this if you have issues pulling certificates through cloudflare, By setting this flag to true disables the need to wait for the propagation of the TXT record to all authoritative name servers.
+        # disablePropagationCheck: true # uncomment this if you have issues pulling certificates through cloudflare, By setting this flag to true disables the need to wait for the propagation of the TXT record to all authoritative name servers.
         resolvers:
           - "1.1.1.1:53"
           - "1.0.0.1:53"
+
+# certificatesResolvers:
+#   letsEncrypt:
+#     acme:
+#       #caServer: "https://acme-v02.api.letsencrypt.org/directory"
+#       #caServer: "https://acme-staging-v02.api.letsencrypt.org/directory"
+#       email: myemail@mayemail.com
+#       storage: /acme.json
+#       #keyType: EC384   
+#       dnsChallenge:
+#         provider: mydnsprovider
