--- a/roles/services/vscode/tasks/main.yml
+++ b/roles/services/vscode/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Make sure the vscode server container is created and running
+  become: yes
   docker_container:
     image: "lscr.io/linuxserver/code-server:latest"
     name: "code-server"
@@ -21,4 +22,5 @@
       - "{{ data_root }}/homeassistant/config:/hass_config"
       - "{{ config_root }}/homepage_config:/hompage_config"
       - "{{ config_root }}/vscode_config:/config"
+      - "{{ nc_html_path }}:/nextcloud"
     restart_policy: unless-stopped
