--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -12,6 +12,7 @@ pgid: '100'
 timezone: "America/New_York"
 created_username: jcoulter
 config_root: "/mnt/config"
+brick_root: "/mnt/brick"
 db_path: "{{ config_root }}/mariadb"
 
 # 172.18.0.1 - 172.18.0.62
