cleanup, fixing traefik, and removing photoprism

--- a/roles/services/duplicati/tasks/main.yml
+++ b/roles/services/duplicati/tasks/main.yml
@@ -46,5 +46,6 @@
       - "{{ data_root }}:/data"
       - "{{ shares }}:/shares"
       - "{{ backups }}:/backups"
+      - "{{ shares }}/immich:/immich"
     restart_policy: unless-stopped
 
