--- a/roles/services/immich/files/docker-compose.yml
+++ b/roles/services/immich/files/docker-compose.yml
@@ -6,8 +6,6 @@
 # The compose file on main may not be compatible with the latest release.
 #
 
-name: immich
-
 services:
   immich-server:
     container_name: immich_server
@@ -72,7 +70,7 @@ services:
         echo "checksum failure count is $$Chksum";
         [ "$$Chksum" = '0' ] || exit 1
       interval: 5m
-      start_interval: 30s
+      # start_interval: 30s
       start_period: 5m
     command: >-
       postgres
