--- a/roles/services/traefik/files/config.yml
+++ b/roles/services/traefik/files/config.yml
@@ -41,17 +41,17 @@ http:
         customRequestHeaders:
           X-Forwarded-Proto: https
 
-    default-whitelist:
-      ipWhiteList:
-        sourceRange:
-        - "10.0.0.0/8"
-        - "192.168.0.0/16"
-        - "172.16.0.0/12"
+    # default-whitelist:
+    #   ipWhiteList:
+    #     sourceRange:
+    #     - "10.0.0.0/8"
+    #     - "192.168.0.0/16"
+    #     - "172.16.0.0/12"
 
     secured:
       chain:
         middlewares:
-        - default-whitelist
+        # - default-whitelist
         - default-headers
 
 CLI:
